## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gnomesword_helpdir = $(prefix)/@NO_PREFIX_PACKAGE_HELP_DIR@/C

gnomesword_help_DATA = \
	intro.html\
	index.html

EXTRA_DIST = $(gnomesword_help_DATA)
